# optee_projects

./: CMakeLists.txt  Makefile  compile.txt
host/: Makefile  main.cpp
lib/ksj_gpio/: Makefile
lib/ksj_gpio/include/: ksj_gpio.h
lib/ksj_gpio/src/: ksj_gpio.c  test.c
lib/ksj_onnxruntime/: Makefile
lib/ksj_onnxruntime/include/: Layer.h  LayerType.h  Tensor.h  activation.h  defines.h  linear.h  model.h  run.h  test.h
lib/ksj_onnxruntime/src/: Tensor.c  activation.c  linear.c  test.c
ta/: Makefile  my_gpio_ta.c  sub.mk  user_ta_header_defines.h
ta/include/: my_gpio_ta.h
tools/: load_onnx.py  test_case_generator.py
